--- a/docs/Problem Solving/LeetCode/561. Array Partition.md
+++ b/docs/Problem Solving/LeetCode/561. Array Partition.md
@@ -26,11 +26,11 @@ class Solution:
 
 ### Complexity Analysis
 
-- n : number of integers
-- Time Complexity : $O(n \log n)$
-  - sort : $O(n \log n)$
-  - slicing : $O(1)$
-- Space Complexity : $O(n)$
+- $n$: number of integers
+- Time Complexity: $O(n \log n)$
+  - sort: $O(n \log n)$
+  - slicing: $O(1)$
+- Space Complexity: $O(n)$
 
 ---
 
@@ -64,14 +64,14 @@ class Solution:
             if len(pair) == 2:
                 sum += min(pair)
                 pair = []
-        return
+        return sum
 ```
 
 ## Solution 3
 
 ### Approach: Calculate with nth numbers (n : even)
 
-1. Almost same with `Approach 1`.
+1. Almost same with `Solution 1`.
 2. Traverse the array with `enumerate`, and check whether index is even or not.
 
 ### Implementation
