--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
@@ -1,6 +1,6 @@
 # 238. Product of Array Except Self
 
-## Description
+## 문제
 
 Given an integer array `nums`, return an array `answer` such that `answer[i]` is equal to the product of all the elements of `nums` except `nums[i]`.
 
@@ -11,20 +11,20 @@ You must write an algorithm that runs in $O(n)$ time and without using the divis
 **Follow up**: Can you solve the problem in $O(1)$ extra space complexity? (The output array does not count as extra space for space complexity analysis.)
 
 :::info
-You can read the full description [**here**](https://leetcode.com/problems/product-of-array-except-self/description/).
+문제 전문은 [**여기**](https://leetcode.com/problems/product-of-array-except-self/description/)에서 읽으실 수 있습니다.
 :::
 
-## Solution 1
+## 풀이 1
 
-### Approach
+### 접근법
 
-1. To get answer in $O(n)$, you need to get product of the array except self in $O(1)$. Because traversing an array works in $O(n)$.
-2. So, getting accumulated product is necessary.
-3. However, it is impossible to solve this problem with getting whole product and deviding by each element itself. You can't devide by zero.
-4. You can accumulate each elements from both sides, right and left.
-5. After handling exception, you can get answer easily.
+1. 정답을 $O(n)$ 안에 얻으려면, 각 원소에서 자기 자신을 제외한 배열의 곱 값을 $O(1)$ 안에 얻어야 합니다. 왜냐하면 배열의 각 원소를 순회하는 데 $O(n)$이 걸리기 때문입니다.
+2. 그래서, 누적 곱의 값을 구하는 것이 필수적입니다(매 순회마다 새로 모든 원소의 곱을 계산하는 것이 아닌).
+3. 그러나, 전체 곱을 구해놓고 매 순회 마다 자기자신으로 나누는 방식으로는 정답을 구할 수 없습니다. 0으로 나눌 수는 없기 때문입니다.
+4. 누적곱을 구하되, 왼쪽 누적 곱과 오른쪽 누적 곱을 따로 구해서 배열로 관리할 수 있습니다.
+5. 예외 처리(양 끝 구간인 경우) 후 정답을 쉽게 구할 수 있습니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 class Solution:
@@ -52,18 +52,18 @@ class Solution:
 
 ### Complexity Analysis
 
-- n: length of `nums`
-- Time Complexity: $O(n)$
-- Space Complexity: $O(n)$
+- n: `nums` 의 길이
+- 시간 복잡도: $O(n)$
+- 공간 복잡도: $O(n)$
 
-## Solution 1+
+## 풀이 1+
 
 ### Approach
 
-1. To get answer of **follow up** question, you must use only one array: return array.
-2. You can assign the product to a variable `accum`, instead of two arrays(`accum_left`, `accum_right`).
+1. **추가 문제**에 대한 답을 얻으려면, 배열을 리턴하는 배열 하나만 사용해야 합니다.
+2. `accum_left`, `accum_right`로 좌우 배열곱을 관리하는 대신 `accum`이라는 변수 하나에 누적 곱 값을 담아 관리할 수 있습니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 class Solution:
@@ -86,27 +86,27 @@ class Solution:
 
 ```
 
-### Complexity Analysis
+### 복잡도 분석
 
-- n: length of `nums`
-- Time Complexity: $O(n)$
-- Space Complexity: $O(1)$ **`improved!`**
+- n: `nums` 의 길이
+- 시간 복잡도: $O(n)$
+- 공간 복잡도: $O(1)$ **`개선됨!`**
 
 ---
 
-## Solutions from the Book
+## 책에 있는 풀이
 
 :::info
-The original source of codes below is [**here**](https://github.com/onlybooks/algorithm-interview).
+원본 코드는 [**여기**](https://github.com/onlybooks/algorithm-interview)에서 확인하실 수 있습니다.
 :::
 
-## Solution 2
+## 풀이 2
 
-### Approach
+### 접근
 
-1. Almost same with `Solution 1+`.
+1. `풀이 1+` 와 거의 유사합니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 from typing import List
