Add translation of LeetCode 121

--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
@@ -1,6 +1,6 @@
 # 121. Best Time to Buy and Sell Stock
 
-## Description
+## 문제
 
 You are given an array `prices` where `prices[i]` is the price of a given stock on the `ith` day.
 
@@ -9,20 +9,20 @@ You want to maximize your profit by choosing a single day to buy one stock and c
 Return the maximum profit you can achieve from this transaction. If you cannot achieve any profit, return `0`.
 
 :::info
-You can read the full description [**here**](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/).
+문제 전문은 [**여기**](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/)에서 읽으실 수 있습니다.
 :::
 
-## Solution 1
+## 풀이 1
 
-### Approach
+### 접근법
 
-1. When the price of stock becomes more expensive than yesterday, maximum profit increases.
-2. But if it becomes cheaper than yesterday, you need to consider 2 cases:
-   1. **Case 1:** today's price is more expensive than minimum price.
-   2. **Case 2:** today's price is cheaper than minimum price.
-3. If it is **Case 2**, the basis of calculating maximum profit changes. So you need to update minimum price.
+1. 오늘의 주가가 어제보다 올랐다면, 최대 이익은 증가합니다.
+2. 그러나 만약 오늘의 주가가 어제보다 낮다면, 다음 2가지 경우를 고려해야 합니다:
+   1. **경우 1:** 오늘의 주가가 기존의 최저가보다는 높은 경우.
+   2. **경우 2:** 오늘의 주가가 기존의 최저가보다 더 낮은 경우.
+3. 만약 **2번째 경우**라면, 최대 이익을 기준하는 기준이 바뀝니다. 따라서 최저가를 갱신해 줍니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 class Solution:
@@ -40,27 +40,27 @@ class Solution:
         return max_profit
 ```
 
-### Complexity Analysis
+### 복잡도 분석
 
-- $n$: length of `prices`
-- Time Complexity: $O(n)$
-- Space Complexity: $O(1)$
+- $n$: `prices` 의 길이
+- 시간 복잡도: $O(n)$
+- 공간 복잡도: $O(1)$
 
 ---
 
-## Solutions from the Book
+## 책에 있는 풀이
 
 :::info
-The original source of codes below is [**here**](https://github.com/onlybooks/algorithm-interview).
+원본 코드는 [**여기**](https://github.com/onlybooks/algorithm-interview)에서 확인하실 수 있습니다.
 :::
 
-## Solution 2
+## 풀이 2
 
-### Approach
+### 접근법
 
-1. Approach with Brute Force.
+1. 완전탐색으로 접근합니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 from typing import List
@@ -76,14 +76,14 @@ class Solution:
         return max_price
 ```
 
-## Solution 3
+## 풀이 3
 
-### Approach
+### 접근법
 
-1. Almost same with `Solution 1`
-2. Initialize minimum value with `sys.maximize`.
+1. `풀이 1` 과 유사합니다.
+2. `sys.maximize` 로 최솟값을 초기화합니다.
 
-### Implementation
+### 구현 코드
 
 ```python
 import sys
