--- a/docs/Problem Solving/LeetCode/125. Valid Palindrome.md
+++ b/docs/Problem Solving/LeetCode/125. Valid Palindrome.md
@@ -6,15 +6,19 @@ A phrase is a palindrome if, after converting all uppercase letters into lowerca
 
 Given a string s, return true if it is a palindrome, or false otherwise.
 
-[You can read the full description here.](https://leetcode.com/problems/valid-palindrome/description/)
+:::info
+You can read the full description [**here**](https://leetcode.com/problems/valid-palindrome/description/).
+:::
 
-## Approach
+## Solution
+
+### Approach
 
 1. Filter characters. Remove characters except for alphabets or numbers.
    1. `re.sub` is a good choice.
 2. Compare strings or lists.
 
-## Solution
+### Implementation
 
 ```python
 class Solution:
@@ -29,6 +33,8 @@ class Solution:
         return res == res[::-1]
 ```
 
-## Time Complexity
+### Complexity Analysis
 
-- O(N) (N : number of characters in sentence `s`)
+- $n$ : number of characters in sentence `s` )
+- Time Complexity : $O(n)$
+- Space Complexit : $O(n)$
