--- a/docs/Problem Solving/BOJ/2309 일곱난쟁이.md
+++ b/docs/Problem Solving/BOJ/2309 일곱난쟁이.md
@@ -49,8 +49,11 @@
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
+
 int a[9];
-int main(){
+
+int main()
+{
     ios::sync_with_stdio(false);
     cin.tie(NULL);
     cout.tie(NULL);
@@ -71,6 +74,7 @@ int main(){
     while(next_permutation(a, a + 9));
 
     for(int i = 0; i < 7; i++) cout << a[i] << "\n";
+
     return 0;
 }
 ```
