--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
@@ -6,9 +6,14 @@ Given an integer array `nums`, return an array `answer` such that `answer[i]` is
 
 The product of any prefix or suffix of `nums` is guaranteed to fit in a 32-bit integer.
 
-You must write an algorithm that runs in $O(n)$ time and without using the division operation.
+You must write an algorithm that runs in $O(n)$ time and <u>without using the division operation</u>.
 
 **Follow up**: Can you solve the problem in $O(1)$ extra space complexity? (The output array does not count as extra space for space complexity analysis.)
+
+### 예제 입출력
+
+**Input:** nums = [1,2,3,4] <br/>
+**Output:** [24,12,8,6] <br/>
 
 :::info
 문제 전문은 [**여기**](https://leetcode.com/problems/product-of-array-except-self/description/)에서 읽으실 수 있습니다.
@@ -21,8 +26,18 @@ You must write an algorithm that runs in $O(n)$ time and without using the divis
 1. 정답을 $O(n)$ 안에 얻으려면, 각 원소에서 자기 자신을 제외한 배열의 곱 값을 $O(1)$ 안에 얻어야 합니다. 왜냐하면 배열의 각 원소를 순회하는 데 $O(n)$이 걸리기 때문입니다.
 2. 그래서, 누적 곱의 값을 구하는 것이 필수적입니다(매 순회마다 새로 모든 원소의 곱을 계산하는 것이 아닌).
 3. 그러나, 전체 곱을 구해놓고 매 순회 마다 자기자신으로 나누는 방식으로는 정답을 구할 수 없습니다. 0으로 나눌 수는 없기 때문입니다.
-4. 누적곱을 구하되, 왼쪽 누적 곱과 오른쪽 누적 곱을 따로 구해서 배열로 관리할 수 있습니다.
+4. 누적 곱을 구하되, 왼쪽 누적 곱과 오른쪽 누적 곱을 따로 구해서 배열로 관리할 수 있습니다.
 5. 예외 처리(양 끝 구간인 경우) 후 정답을 쉽게 구할 수 있습니다.
+6. 예를 들어, nums = [1, 2, 3, 4] 일 때,
+
+```
+nums = [1, 2, 3, 4]
+accum_left = [1, 2, 6, 24]
+accum_right = [24, 24, 12, 4]
+ans[i] = accum_left[i - 1] * accum_right[i + 1]
+       = [24, 1 * 12, 2 * 4, 6]
+       = [24, 12, 8, 6]
+```
 
 ### 구현 코드
 
@@ -58,7 +73,7 @@ class Solution:
 
 ## 풀이 1+
 
-### Approach
+### 접근법
 
 1. **추가 문제**에 대한 답을 얻으려면, 배열을 리턴하는 배열 하나만 사용해야 합니다.
 2. `accum_left`, `accum_right`로 좌우 배열곱을 관리하는 대신 `accum`이라는 변수 하나에 누적 곱 값을 담아 관리할 수 있습니다.
@@ -102,7 +117,7 @@ class Solution:
 
 ## 풀이 2
 
-### 접근
+### 접근법
 
 1. `풀이 1+` 와 거의 유사합니다.
 
@@ -121,7 +136,7 @@ class Solution:
             p = p * nums[i]
         p = 1
 
-        for i in range(len(nums) - 1, 0 - 1, -1):
+        for i in range(len(nums) - 1, - 1, -1):
             out[i] = out[i] * p
             p = p * nums[i]
         return out
