--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/238. Product of Array Except Self.md
@@ -35,8 +35,8 @@ nums = [1, 2, 3, 4]
 accum_left = [1, 2, 6, 24]
 accum_right = [24, 24, 12, 4]
 ans[i] = accum_left[i - 1] * accum_right[i + 1]
-       = [24, 1 * 12, 2 * 4, 6]
-       = [24, 12, 8, 6]
+ans = [24, 1 * 12, 2 * 4, 6]
+    = [24, 12, 8, 6]
 ```
 
 ### 구현 코드
