--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
@@ -8,6 +8,12 @@ You want to maximize your profit by choosing a single day to buy one stock and c
 
 Return the maximum profit you can achieve from this transaction. If you cannot achieve any profit, return `0`.
 
+### 예제 입출력
+
+**Input:** prices = [7,1,5,3,6,4] <br/>
+**Output:** 5 <br/>
+**Explanation: ** Buy on day 2 (price = 1) and sell on day 5 (price = 6), profit = 6-1 = 5. <br/>
+Note that buying on day 2 and selling on day 1 is not allowed because you must buy before you sell.
 :::info
 문제 전문은 [**여기**](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/)에서 읽으실 수 있습니다.
 :::
