--- a/docs/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
+++ b/docs/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
@@ -18,8 +18,8 @@ You can read the full description [**here**](https://leetcode.com/problems/best-
 
 1. When the price of stock becomes more expensive than yesterday, maximum profit increases.
 2. But if it becomes cheaper than yesterday, you need to consider 2 cases:
-   1. **Case 1:** today's price is more expensive than minimum price.
-   2. **Case 2:** today's price is cheaper than minimum price.
+   1. Today's price is more expensive than minimum price.
+   2. Today's price is cheaper than minimum price.
 3. If it is **Case 2**, the basis of calculating maximum profit changes. So you need to update minimum price.
 
 ### Implementation
