--- a/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/Problem Solving/LeetCode/121. Best Time to Buy and Sell Stock.md
@@ -24,8 +24,8 @@ Note that buying on day 2 and selling on day 1 is not allowed because you must b
 
 1. 오늘의 주가가 어제보다 올랐다면, 최대 이익은 증가합니다.
 2. 그러나 만약 오늘의 주가가 어제보다 낮다면, 다음 2가지 경우를 고려해야 합니다:
-   1. **경우 1:** 오늘의 주가가 기존의 최저가보다는 높은 경우.
-   2. **경우 2:** 오늘의 주가가 기존의 최저가보다 더 낮은 경우.
+   1. 오늘의 주가가 기존의 최저가보다는 높은 경우.
+   2. 오늘의 주가가 기존의 최저가보다 더 낮은 경우.
 3. 만약 **2번째 경우**라면, 최대 이익을 기준하는 기준이 바뀝니다. 따라서 최저가를 갱신해 줍니다.
 
 ### 구현 코드
