--- a/docs/Problem Solving/LeetCode/622. Design Circular Queue.md
+++ b/docs/Problem Solving/LeetCode/622. Design Circular Queue.md
@@ -113,8 +113,7 @@ class MyCircularQueue:
 
 ### 접근법
 
-1. 책에서는 rear가 맨 마지막 원소를 바로 가리키도록 구현합니다.
-2. Front, Rear는 Full 과 Empty 상태가 동일해서 None 인지 여부를 한 번 더 확인해주어야 합니다.
+1. Front, Rear는 Full 과 Empty 상태가 동일해서 None 인지 여부를 한 번 더 확인해주어야 합니다.
 
 ### 참고용 그림
 
@@ -123,25 +122,40 @@ class MyCircularQueue:
 ### 구현 코드
 
 ```python
-class MyQueue:
-    def __init__(self):
-        self.input = []
-        self.output = []
+class MyCircularQueue:
+    def __init__(self, k: int):
+        self.q = [None] * k
+        self.maxlen = k
+        self.p1 = 0
+        self.p2 = 0
 
-    def push(self, x):
-        self.input.append(x)
+    # enQueue(): 리어 포인터 이동
+    def enQueue(self, value: int) -> bool:
+        if self.q[self.p2] is None:
+            self.q[self.p2] = value
+            self.p2 = (self.p2 + 1) % self.maxlen
+            return True
+        else:
+            return False
 
-    def pop(self):
-        self.peek()
-        return self.output.pop()
+    # deQueue(): 프론트 포인터 이동
+    def deQueue(self) -> bool:
+        if self.q[self.p1] is None:
+            return False
+        else:
+            self.q[self.p1] = None
+            self.p1 = (self.p1 + 1) % self.maxlen
+            return True
 
-    def peek(self):
-        # output이 없으면 모두 재입력
-        if not self.output:
-            while self.input:
-                self.output.append(self.input.pop())
-        return self.output[-1]
+    def Front(self) -> int:
+        return -1 if self.q[self.p1] is None else self.q[self.p1]
 
-    def empty(self):
-        return self.input == [] and self.output == []
+    def Rear(self) -> int:
+        return -1 if self.q[self.p2 - 1] is None else self.q[self.p2 - 1]
+
+    def isEmpty(self) -> bool:
+        return self.p1 == self.p2 and self.q[self.p1] is None
+
+    def isFull(self) -> bool:
+        return self.p1 == self.p2 and self.q[self.p1] is not None
 ```
