--- a/docs/Problem Solving/LeetCode/310. Minimum Height Trees.md
+++ b/docs/Problem Solving/LeetCode/310. Minimum Height Trees.md
@@ -32,6 +32,8 @@ You can read the full description [**here**](https://leetcode.com/problems/maxim
 
 ### 접근법
 
+![image-20230206214305681](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302062143799.png)
+
 1. BFS로 접근합니다.
 2. dictionary로 {출발노드: [도착노드]} 의 양방향 그래프를 구성합니다.
 3. 값의 길이가 1개인 노드들을 leaf로 하고, 제거해줍니다.
