--- a/docs/Problem Solving/LeetCode/215. Kth Largest Element in an Array.md
+++ b/docs/Problem Solving/LeetCode/215. Kth Largest Element in an Array.md
@@ -19,6 +19,66 @@ Output: 5
 You can read the full description [**here**](https://leetcode.com/problems/kth-largest-element-in-an-array/description/).
 :::
 
+## 힙 개념
+
+### 요소 삽입
+
+![](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302201814052.png)
+
+### 요소 추출
+
+![](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302201814615.png)
+
+### 구현 코드
+
+```python
+class BinaryHeap(object) :
+
+    def __init__(self) :
+        self.items = [None]
+
+    def __len__(self) :
+        return len(self.items)-1
+
+    # 삽입 시 실행, 반복 구조 구현
+    def _percolate_up(self) :
+        i = len(self)
+        parent = i // 2
+        while parent > 0 :
+            if self.items[i] < self.items[parent] :
+                self.items[parent] , self.items[i] = \
+                self.items[i] , self.items[parent]
+            i = parent
+            parent = i // 2
+    def insert(self,k) :
+        self.items.append(k)
+        self._percolate_up()
+
+    # 추출시 실행, 재귀 구조 구현
+    def _percolate_down(self,idx) :
+        left = idx * 2
+        right = idx * 2 + 1
+        smallest = idx
+
+        if left <= len(self) and self.items[left] < self.items[smallest] :
+            smallest = left
+
+        if right <= len(self) and self.items[right] < self.items[smallest] :
+            smallest = right
+
+        if smallest != idx :
+            self.items[idx] , self.items[smallest] = \
+            self.items[smallest] , self.items[idx]
+            self._percolate_down(smallest)
+
+    def extract(self) :
+        extracted = self.items[1]
+        self.items[1] = self.items[len(self)]
+        self.items.pop()
+        self._percolate_down(1)
+        return extracted
+```
+
 ## 풀이 1
 
 ### 접근법
