--- a/docs/Problem Solving/LeetCode/336. Palindrome Pairs.md
+++ b/docs/Problem Solving/LeetCode/336. Palindrome Pairs.md
@@ -52,9 +52,22 @@ You can read the full description [**here**](https://leetcode.com/problems/palin
 
 ## 풀이 2
 
+![image-20230220183309526](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302201833554.png)
+
+교재 예제: 입력값이 ['d', 'cbbcd', 'dcbb', 'dcbc', 'cbbc', 'bbcd'] 인 경우
+
+![image-20230220183348402](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302201833436.png)
+
 ### 접근법
 
-1.
+1. TrieNode 클래스를 별도로 선언합니다.
+2. 단어들을 뒤집어서 트라이에 넣습니다.
+3. 팰린드롬을 찾을 때 경우의 수는 크게 3가지 입니다.
+   1. 트라이의 단어와 길이가 같을 때
+   2. 트라이의 단어보다 길이가 모자랄 때
+   3. 트라이의 단어보다 길이가 길 때
+4. 위의 2, 3번 경우에서는 더 긴 쪽의 남은 부분이 트라이를 만족시켜야합니다.
+5. 시간복잡도를 위해 트라이 자체에 메모를 해둡니다.
 
 ### 구현 코드
 
