--- a/docs/Problem Solving/LeetCode/208. Implement Trie.md
+++ b/docs/Problem Solving/LeetCode/208. Implement Trie.md
@@ -154,3 +154,7 @@ class Trie:
 
         return True
 ```
+
+## 참고용 그림
+
+![image-20230220185208780](https://raw.githubusercontent.com/BonJunKu/image_server/upload/img/202302201852818.png)
